<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/verifycode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_code"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:id="@+id/verifycodeImg"
                android:layout_width="200dp"
                android:layout_height="50dp" />


            <TextView
                android:id="@+id/loginLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="登录日志"
                android:padding="3dp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />


            <me.luocaca.pluginapplication.widget.DispatchScrollView

                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="这里显示个人信息" />
            </me.luocaca.pluginapplication.widget.DispatchScrollView>


            <Button
                android:id="@+id/getInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="获取个人数据"

                />


            <me.luocaca.pluginapplication.widget.DispatchScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="这里显示个人信息"
                    android:textIsSelectable="true" />
            </me.luocaca.pluginapplication.widget.DispatchScrollView>


            <Button
                android:id="@+id/getList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="获取课程列表"

                />


            <me.luocaca.pluginapplication.widget.DispatchScrollView
                android:layout_width="match_parent"
                android:layout_height="200dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/passId"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="id" />

                    <TextView
                        android:id="@+id/passLog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="这里显示个人信息" />
                </LinearLayout>


            </me.luocaca.pluginapplication.widget.DispatchScrollView>


            <Button
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="跳过课程"

                />


        </LinearLayout>


    </ScrollView>
</LinearLayout>